--- a/1.0/tr/ekran-orgusu.html
+++ b/1.0/tr/ekran-orgusu.html
@@ -2,144 +2,154 @@
 layout: s1n0/varsayilan
 title: Ekran Örgüsü
 ---
-<div data-gnl="24 24p">
-    <p>
-      Günümüzde ekran çözünürlüklerinin çeşitliliğinin artmasıyla zorunlu olarak
-      planlanan uyumlu tasarımlarınızı deveb ile yapabilirsiniz. Yakın gelecekte
-      yaygınlaşacak minik ekranlar dahil. Önyüz çatısı dünyasında yeterliği olduğu
-      düşünülen uyumlu ekran özellikleri 5 6 ölçek civarındadır. Deveb önyüz çatısı ise daha
-      kapsamlı olarak hazır hale getirilip kullanıma sunulmuştur.
-    </p>
-    <p>
-      Saat ekranları, telefon ekranları, tablet ekranları, dizüstü ekranları,
-      masaüstü ekranları, tv ekranları ve dev ekranlar olarak gruplandırılmış
-      ekranlar 8 farklı adet uyumlu ekran ölçeği ile kullanılır.
-      Aşağıdaki tabloda uyumlu ekran ölçeklerini inceleyebilirsiniz.
-    </p>
-    <p></p>
-    <table class="tablo">
-      <thead>
-        <tr>
-          <th>Ekranlar</th>
-          <th>
-            Genel <br>
-            <i class="fa fa-minus-square-o" aria-hidden="true"></i>
-            <i class="fa fa-mobile" aria-hidden="true"></i>
-            <i class="fa fa-tablet" aria-hidden="true"></i>
-            <i class="fa fa-laptop" aria-hidden="true"></i>
-            <i class="fa fa-desktop" aria-hidden="true"></i>
-            <i class="fa fa-television" aria-hidden="true"></i>
-            <i class="fa fa-window-maximize" aria-hidden="true"></i>
-            <br><span data-metin="olumlu ince">saat » dev</span>
-          </th>
-          <th>
-            Minik <br>
-            <i class="fa fa-minus-square-o" aria-hidden="true"></i>
-            <br><span data-metin="olumlu ince">saat</span>
-          </th>
-          <th>
-            Ufak <br>
-            <i class="fa fa-mobile" aria-hidden="true"></i>
-            <br><span data-metin="olumlu ince">telefon</span>
-          </th>
-          <th>
-            Küçük <br>
-            <i class="fa fa-tablet" aria-hidden="true"></i>
-            <br><span data-metin="olumlu ince">tablet</span>
-          </th>
-          <th>
-            Orta <br>
-            <i class="fa fa-laptop" aria-hidden="true"></i>
-            <br><span data-metin="olumlu ince">dizüstü</span>
-          </th>
-          <th>
-            Büyük <br>
-            <i class="fa fa-desktop" aria-hidden="true"></i>
-            <br><span data-metin="olumlu ince">Masaüstü</span>
-          </th>
-          <th>
-            Kocaman <br>
-            <i class="fa fa-television" aria-hidden="true"></i>
-            <br><span data-metin="olumlu ince">Televizyon</span>
-          </th>
-          <th>
-            Dev <br>
-            <i class="fa fa-window-maximize" aria-hidden="true"></i>
-            <br><span data-metin="olumlu ince">Dev ekran</span>
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th>Birimleri</th>
-          <td>data-gnl</td>
-          <td>data-mnk</td>
-          <td>data-ufk</td>
-          <td>data-kçk</td>
-          <td>data-ort</td>
-          <td>data-byk</td>
-          <td>data-kcm</td>
-          <td>data-dev</td>
-        </tr>
-        <tr>
-          <th>Ölçekler</th>
-          <td>0 »</td>
-          <td>0 » 300px</td>
-          <td>300px »</td>
-          <td>576px »</td>
-          <td>768px »</td>
-          <td>992px »</td>
-          <td>1200px »</td>
-          <td>1900px »</td>
-        </tr>
-        <tr>
-          <th>Ekran Seçme</th>
-          <td><span data-metin="ana gri">sınıf</span></td>
-          <td>bunu-<span data-metin="ana gri">sınıf</span><br><span data-metin="ana gri">sınıf</span><br>büyükleriyle-<span data-metin="ana gri">sınıf</span><br>büyükleri-<span data-metin="ana gri">sınıf</span></td>
-          <td colspan="5">küçükleri-<span data-metin="ana gri">sınıf</span><br>küçükleriyle-<span data-metin="ana gri">sınıf</span><br>bunu-<span data-metin="ana gri">sınıf</span><br><span data-metin="ana gri">sınıf</span><br>büyükleriyle-<span data-metin="ana gri">sınıf</span><br>büyükleri-<span data-metin="ana gri">sınıf</span></td>
-          <td>küçükleri-<span data-metin="ana gri">sınıf</span><br>küçükleriyle-<span data-metin="ana gri">sınıf</span><br>bunu-<span data-metin="ana gri">sınıf</span><br><span data-metin="ana gri">sınıf</span></td>
-        </tr>
-      </tbody>
-    </table>
+<p class="girlik">
+  Saat ekranları, telefon ekranları, tablet ekranları, dizüstü ekranları,
+  masaüstü ekranları, tv ekranları ve dev ekranlar olarak gruplandırılmış
+  8 farklı adet ekran ölçeği uyarlamalı olarak kullanılır.
+</p>
+<p>
+  Günümüzde ekran ölçek ve çözünürlüklerindeki çeşitliliğinin artmasıyla tasarımlarınızı
+  zorunlu olarak uyarlamalı yapmak durumundayız. Yakın gelecekte yaygınlaşacak
+  minik ekranları bile şimdiden ele almalıyız... Önyüz çatıları dünyasında yeterli
+  olduğu düşünülen uyarlamalı ekran ölçekleri beş altı civarındadır.
+  <span class="simget">deveb</span> önyüz çatısı ise daha kapsamlı olarak hazır
+  hâle getirilip kullanıma sunulmuştur. Aşağıdaki tabloda uyumlu ekran ölçeklerini
+  inceleyebilirsiniz.
+</p>
+<p></p>
+<table class="tablo">
+  <thead>
+    <tr>
+      <th>Ekranlar</th>
+      <th>
+        Genel <br>
+        <i class="fa fa-minus-square-o" aria-hidden="true"></i>
+        <i class="fa fa-mobile" aria-hidden="true"></i>
+        <i class="fa fa-tablet" aria-hidden="true"></i>
+        <i class="fa fa-laptop" aria-hidden="true"></i>
+        <i class="fa fa-desktop" aria-hidden="true"></i>
+        <i class="fa fa-television" aria-hidden="true"></i>
+        <i class="fa fa-window-maximize" aria-hidden="true"></i>
+        <br><span data-metin="olumlu ince">saat » dev</span>
+      </th>
+      <th>
+        Minik <br>
+        <i class="fa fa-minus-square-o" aria-hidden="true"></i>
+        <br><span data-metin="olumlu ince">saat</span>
+      </th>
+      <th>
+        Ufak <br>
+        <i class="fa fa-mobile" aria-hidden="true"></i>
+        <br><span data-metin="olumlu ince">telefon</span>
+      </th>
+      <th>
+        Küçük <br>
+        <i class="fa fa-tablet" aria-hidden="true"></i>
+        <br><span data-metin="olumlu ince">tablet</span>
+      </th>
+      <th>
+        Orta <br>
+        <i class="fa fa-laptop" aria-hidden="true"></i>
+        <br><span data-metin="olumlu ince">dizüstü</span>
+      </th>
+      <th>
+        Büyük <br>
+        <i class="fa fa-desktop" aria-hidden="true"></i>
+        <br><span data-metin="olumlu ince">Masaüstü</span>
+      </th>
+      <th>
+        Kocaman <br>
+        <i class="fa fa-television" aria-hidden="true"></i>
+        <br><span data-metin="olumlu ince">Televizyon</span>
+      </th>
+      <th>
+        Dev <br>
+        <i class="fa fa-window-maximize" aria-hidden="true"></i>
+        <br><span data-metin="olumlu ince">Dev ekran</span>
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>Birimleri</th>
+      <td>data-gnl</td>
+      <td>data-mnk</td>
+      <td>data-ufk</td>
+      <td>data-kçk</td>
+      <td>data-ort</td>
+      <td>data-byk</td>
+      <td>data-kcm</td>
+      <td>data-dev</td>
+    </tr>
+    <tr>
+      <th>Ölçekler</th>
+      <td>0 »</td>
+      <td>0 » 300px</td>
+      <td>300px »</td>
+      <td>576px »</td>
+      <td>768px »</td>
+      <td>992px »</td>
+      <td>1200px »</td>
+      <td>1900px »</td>
+    </tr>
+    <tr>
+      <th>Ekran Seçme</th>
+      <td><span data-metin="ana gri">sınıf</span></td>
+      <td>bunu-<span data-metin="ana gri">sınıf</span><br><span data-metin="ana gri">sınıf</span><br>büyükleriyle-<span data-metin="ana gri">sınıf</span><br>büyükleri-<span data-metin="ana gri">sınıf</span></td>
+      <td colspan="5">küçükleri-<span data-metin="ana gri">sınıf</span><br>küçükleriyle-<span data-metin="ana gri">sınıf</span><br>bunu-<span data-metin="ana gri">sınıf</span><br><span data-metin="ana gri">sınıf</span><br>büyükleriyle-<span data-metin="ana gri">sınıf</span><br>büyükleri-<span data-metin="ana gri">sınıf</span></td>
+      <td>küçükleri-<span data-metin="ana gri">sınıf</span><br>küçükleriyle-<span data-metin="ana gri">sınıf</span><br>bunu-<span data-metin="ana gri">sınıf</span><br><span data-metin="ana gri">sınıf</span></td>
+    </tr>
+  </tbody>
+</table>
 
-    <h3>Ekran Yönergeleri</h3>
+<h3>Ekran Yönergeleri</h3>
 
-    <p>
-      Deveb ekran örgüsü ekranları belirli bir yönde etki altına alır. Kısaca büyük
-      ekranlardan küçük ekranlara doğru, küçük ekranlardan büyük ekranlara doğru,
-      sadece belirtilen ekranlar ve belirtilen ekran dışında olanlar gibi ihtiyacınıza
-      göre yöntemleri kullanabilirsiniz. Varsayılan olarak
-      <span data-metin="ana">SIFIR >> SONSUZ</span> yönündedir yani küçük ekranlardan
-      büyük ekranlara doğrudur. Bunun yanında ters yönde ve sadece belirtilmiş ekran
-      aralığı için yönergeler de bulunur.
-      <br><br>
-      Örneğin bir alanı dizüstü ekranlarına kadar gösterilmesini istemiyorsanız
-      <span data-metin="ana">data-ort="küçükleri-gizle"</span>
-      olarak tanımlamanız yeterlidir. Bu işlem dizüstü hariç daha küçük ekranlarda
-      gizleme işlemi yapacaktır. Deveb'in bazı özelliklerinde varsayılan ekran kapsama
-      yönü küçük ekrandan büyük ekrana doğrudur. Bunun dışında olan durumlarda ise
-      ekranları kapsama yöntemini harici olarak belirtmeniz gerekmektedir.
-    </p>
+<p>
+  <span class="simget">deveb</span> ekran örgüsü küçük ekranlardan büyük ekranlara
+  doğru olmak üzere belirli bir yönde varsayılan olarak etki altına alır. Bunun
+  haricinde bazı durumlarda geçerli olmak üzere tam tersi yönde veya belirtilen
+  tek ekran önceğinde kullanımı da yapılabilir.
+  <br><br>
+  Örneğin bir ögeyi veya alanı dizüstü ekranlarına kadar gizlemek istiyorsanız
+  <span data-metin="ana">data-ort="küçükleri-gizle"</span> olarak tanımlamanız yeterlidir.
+  Böylelikle dizüstünden küçük ekranlarda gizleme yapmış olacaksınız.
+</p>
 
-    <h4>Kullanımı</h4>
-    <p>
-      Az önce belirttiğimiz gibi bazı özelliklerinde varsayılan yön küçükten büyüğe
-      doğru demiştik. Kap örgüsü mesela buna bir örnektir. Ve sadece bu şekilde kullanılması
-      dışında bir özelliğe sahip değildir. Kap örgüsünden bir alıntı yapalım isterseniz.
-    </p>
-    <p>Örneğin dizüstü ekranlardan başlayarak daha büyük ekranlarda bir alanın yarısı kadar alan parçası kullanmak istiyorsak şöyle yazabiliriz; data-ort="1 2p". Daha küçük olan ekranlar ne olacak diye soruyor gibisiniz... Tanımlama yapmadıysanız büyük ihtimal doğal (auto) genişliğe veya 100% genişliğe sahip olacaktır.</p>
-    <p>Diğer durumlarda ise ekran yönlerini belirtmek için şöyle kullanımlara baş vururuz;</p>
-    <p data-metin="ana">Türkçe: küçükleriyle-?, küçükleri-?, ?, büyükleriyle-?, büyükleri-?</p>
-    <p data-metin="ana">English: ?-with-smaller, ?-smaller, ?, ?-with-bigger, ?-bigger</p>
-    <h3>küçükleriyle-? | ?-with-smaller</h3>
-    <p>Belirtildiği ekran dahil kendisinden küçük ekranları kapsar. Örnek: data-ort="küçükleriyle-gizle" (english: data-md="hide-with-smaller")</p>
-    <h3>küçükleri-? | ?-smaller</h3>
-    <p>Belirtildiği ekrandan küçük ekranları kapsar. Örnek: data-ort="küçükleri-gizle" (english: data-md="hide-smaller")</p>
-    <h3>bunu-? | ?-this</h3>
-    <p>Belirtildiği ekranları kapsar. Örnek: data-ort="bunu-gizle" (english: data-md="hide-this")</p>
-    <h3>büyükleri-? | ?-bigger</h3>
-    <p>Belirtildiği ekrandan büyük ekranları kapsar. Örnek: data-ort="büyükleri-gizle" (english: data-md="hide-bigger")</p>
-    <h3>büyükleriyle-? | ?-with-bigger</h3>
-    <p>Belirtildiği ekran dahil kendisinden büyük ekranları kapsar. Örnek: data-ort="büyükleriyle-gizle" (english: data-md="hide-with-bigger")</p>
-
-</div>
+<h4>Kullanımı</h4>
+<p>
+  Ekran örgüsü, <span class="simget">deveb</span>'in özellikleriyle iliştirilmiş
+  şekilde kullanılır. Kap örgüsünde varsayılan kural gerçeli olduğu gibi başka
+  özelliklerde daha farklı kullanıldığını görmeniz doğaldır.
+</p>
+<p>
+  Örneğin dizüstü ekranlardan başlayarak daha büyük ekranlarda bir alanın yarısı
+  kadar alan parçası kullanmak istiyorsak şöyle yazabiliriz; data-ort="1 2p". Daha
+  küçük olan ekranlar ne olacak diye soruyor gibisiniz... Tanımlama yapmadıysanız
+  büyük ihtimal doğal (auto) genişliğe veya 100% genişliğe sahip olacaktır.
+  Diğer durumlarda ise ekran yönlerini belirtmek için şöyle kullanımlara baş vururuz;
+</p>
+<h5>küçükleriyle-?</h5>
+<p>
+  Belirtildiği ekran dahil kendisinden küçük ekranları kapsar. Örnek:
+  data-ort="küçükleriyle-gizle" (english: data-md="hide-with-smaller")
+</p>
+<h5>küçükleri-?</h5>
+<p>
+  Belirtildiği ekrandan küçük ekranları kapsar. Örnek: data-ort="küçükleri-gizle"
+  (english: data-md="hide-smaller")
+</p>
+<h5>bunu-?</h5>
+<p>
+  Belirtildiği ekranları kapsar. Örnek: data-ort="bunu-gizle"
+  (english: data-md="hide-this")
+</p>
+<h5>büyükleri-?</h5>
+<p>
+  Belirtildiği ekrandan büyük ekranları kapsar. Örnek: data-ort="büyükleri-gizle"
+  (english: data-md="hide-bigger")
+</p>
+<h5>büyükleriyle-?</h5>
+<p>
+  Belirtildiği ekran dahil kendisinden büyük ekranları kapsar. Örnek:
+  data-ort="büyükleriyle-gizle" (english: data-md="hide-with-bigger")
+</p>
