--- a/1.0/tr/index.html
+++ b/1.0/tr/index.html
@@ -1,13 +1,10 @@
 ---
 layout: s1n0/varsayilan
-title: Deveb'e Hoş Geldiniz
+title: Başlangıç
 ---
 <p class="girlik">
-  Deveb, ağ geliştiricileri için geliştirilen önyüz çatısıdır.
-  Ağ geliştiricileri ve adayları, alışılmış olanın ötesine geçmeye
-  hazırlanın. Yeni bir soluk getiren Deveb ile tanışmak üzeresiniz. Özellikleriyle
-  birlikte ele alındığında etkisi altında kalacağınıza inanıyoruz. Barındırdığı
-  özellikleri öğrenmek fazla zamanınızı almayacak.
+  Ağ geliştiricileri için geliştirilen, alışılmış olanın ötesinde, yepyeni özellikleriyle,
+  yepyeni bir soluk getiren, günümüzün uyarlamalı önyüz çatısı <span class="simget">deveb</span>'e hoş geldiniz.
 </p>
 
 <div data-gnl="1 1p ortada metin-ortada" data-byk="dengeli-aralık">
@@ -41,38 +38,28 @@ title: Deveb'e Hoş Geldiniz
 
 <h1>Nasıl Kurulur?</h1>
 <p>
-  Deveb kurulumu oldukça basittir. En son yayınlanmış kararlı sürümünü edinin.
-  CSS ve gereklilik durumunda JavaScript dosyasını projenize dahil edin. Daha fazlası
-  için <a href="/1.0/tr/kurulum.html">kurulum sayfasını</a> inceleyin.
-</p>
-<h1> Kap Örgüsü Çoklu Düzende</h1>
-<p>
-  Nasıl ya? Evet doğru duydunuz. Dilediğiniz an 12'li, 18'li, 10'lu, 24'lü kap örgüsü
-  kurabiliyorsunuz. Bunun için CSS dosyalarına müdahale etmeniz gerekmiyor. Evet
-  aynı sayfa içinde çoklu düzen kurabilirsiniz. Heyecanlandırıcı, değil mi? Daha
-  fazla bilgi için <a href="/1.0/tr/kap-orgusu.html">kap örgüsü sayfalarına</a> bakabilirsiniz.
+  <span class="simget">deveb</span> kurulumu oldukça basittir. En son yayınlanmış
+  kararlı sürümü indirin ve çalışmanıza gömün. Yapmanız gerekenler
+  <a href="/1.0/tr/kurulum.html">kurulum sayfası</a>nda anlatılmıştır.
 </p>
 
 <h1>Yeni Şeyler Var!</h1>
 <p>
-  Deveb her şeyi "html class" diye bilinen html sınıflarına tıkmıyor. Peki bir
-  geliştirici Deveb'i nasıl kullanacak? Deveb'in özellikleri "data-attr" olarak
-  bilinen özel veri niteliği ile birlikte kullanılmaktadır. Bunların yanında dikkat
-  etmenizi istediğimiz bazı şeyler var;
+  HTML sınıfları yerine HTML veri-öznitelikleri ile çalışmaktadır. Bazı özellikleri
+  uyarlamalı olabilmesi için ekran örgüsüyle iliştirilmiş olarak çalışır. Çoklu parça
+  düzenine sahip kap örgüsü kullanıma hazırdır. Sadece bu özelliği olmayıp genleşme,
+  konumlama gibi yararlı özellikleri de barındırır. Küçük ekran öncelikli çalışan
+  özelliklerimizi yakından incelemek için belleti sayfalarını inceleyin.
 </p>
 
+<h1>Topluluk</h1>
 <p>
-  Deveb'i karşınıza koyduğunuzda gözünüze çarpacak olan ilk kural ekran ölçeklerinin
-  veri niteliği olarak tanımlandırılabilmesi olacak. Bu şu demek oluyor; her ekran
-  ölçeğini bir veri niteliği olarak tanımlayıp içine değerleri yazabileceksiniz.
-  Böylelikle ekran ölçeklerine söz geçirmeniz kolaylaşacak. Tasarımlarınızı yaparken
-  bunu daha iyi fark edeceksiniz. Dikkatinizi çekmek istediğimiz nokta diğer önyüz
-  çatılarında sınıflarla çalışırken her şeyi bir arada yazmanız gerekir. Bunların
-  yanına harici olarak oluşturulmuş sınıfları eklediğinizde her şey iç içe girmeye başlar.
-  CSS tarafında bunlara söz geçirmek teknik olarak sorunsuz olsa da Deveb'teki gibi
-  kullanım etkilerine ve kolaylıklarına her zaman sahip olmaz. Örneğin Deveb diğer
-  önyüz çatılarıyla çakışmadan bir arada kullanılabilir. Diğerleri benzer sınıf
-  terimleri kullandığı için düzeltmeler yapmak zorunluğuyla karşı karşıya kalma
-  olasılığına her zaman sahip olacaksınız.
+  <span class="simget">deveb</span>'in geliştirilme sürecinde takip ederek güncel
+  kalın ve aşağıdaki bağlardan topluluğa ulaşın.
 </p>
-<p>Deveb'in veri niteliği yöntemini kullanmasının birkaç sebebini okudunuz. Biraz da ekran ölçeklerinden bahsedelim.</p>
+<ul>
+  <li><a href="https://www.facebook.com/datadeveb/?ref=bookmarks">Facebook sayfamızı</a> takip edin.</li>
+  <li><a href="https://www.facebook.com/groups/1818283228485179/?ref=bookmarks">Facebook grubumuza</a> katılın.</li>
+  <li><a href="https://twitter.com/datadeveb">Twitter'da datadeveb hesabını</a> takip edin.</li>
+  <li><a href="https://discord.gg/GeaYaCb">Discord odamız</a>a katılın canlı iletişim kurun.</li>
+</ul>
