--- a/1.0/tr/index.html
+++ b/1.0/tr/index.html
@@ -54,7 +54,7 @@ title: Başlangıç
 
 <h1>Topluluk</h1>
 <p>
-  <span class="simget">deveb</span>'in geliştirilme sürecinde takip ederek güncel
+  <span class="simget">deveb</span> geliştirilirken takip olarak güncel
   kalın ve aşağıdaki bağlardan topluluğa ulaşın.
 </p>
 <ul>
