--- a/1.0/tr/kap-orgusu/konumlama.html
+++ b/1.0/tr/kap-orgusu/konumlama.html
@@ -7,7 +7,7 @@ title: Kap Örgüsü Konumlama
 
   <h3>Konumlama: <span data-metin="dikkat">sağdan|soldan-SAYI SAYIp-aralık</span></h3>
   <p>Bir ögeyi soldan veya sağdan parça düzenine göre aralık bırakmak istiyorsak bu konumlama özelliğini kullanırız. Eğer parça ölçeğinde değişiklik yapmak istemiyorsanız sadece sağdan|soldan-SAYI yazmanız yeterli olacaktır.</p>
-  <div class="örnek" data-gnl="1 1p">
+  <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
       <div data-gnl="1 3p soldan-1 6p-aralık">
@@ -48,7 +48,7 @@ title: Kap Örgüsü Konumlama
   <p>"ortada-ol" sınıfı bir HTML etiketini ortalanmış olarak gösterir.</p>
   <p>"sağda-ol" sınıfı bir HTML etiketini sağa dayalı olarak gösterir.</p>
   <p></p>
-  <div class="örnek" data-gnl="1 1p">
+  <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
       <div data-gnl="1 1p solda">
@@ -95,39 +95,39 @@ title: Kap Örgüsü Konumlama
   <p>"göbekte-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin dikey konumunda ortalanmış olarak gösterir.</p>
   <p>"altta-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin aşağısına dayalı olarak gösterir.</p>
   <p></p>
-  <div class="örnek" data-gnl="1 1p">
+  <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
       <div data-gnl="1 3p üstte" style="height:500px;">
-        <div data-gnl="1 1p">
+        <div>
           üstte
         </div>
-        <div data-gnl="1 1p">
+        <div>
           üstte
         </div>
-        <div data-gnl="1 1p">
+        <div>
           üstte
         </div>
       </div>
       <div data-gnl="1 3p göbekte" style="height:500px;">
-        <div data-gnl="1 1p">
+        <div>
           göbekte
         </div>
-        <div data-gnl="1 1p">
+        <div>
           göbekte
         </div>
-        <div data-gnl="1 1p">
+        <div>
           göbekte
         </div>
       </div>
       <div data-gnl="1 3p altta" style="height:500px;">
-        <div data-gnl="1 1p">
+        <div>
           altta
         </div>
-        <div data-gnl="1 1p">
+        <div>
           altta
         </div>
-        <div data-gnl="1 1p">
+        <div>
           altta
         </div>
       </div>
@@ -135,35 +135,35 @@ title: Kap Örgüsü Konumlama
   </div>
   {% highlight html %}
     <div data-gnl="1 3p üstte" style="height:500px;">
-      <div data-gnl="1 1p">
+      <div>
         üstte
       </div>
-      <div data-gnl="1 1p">
+      <div>
         üstte
       </div>
-      <div data-gnl="1 1p">
+      <div>
         üstte
       </div>
     </div>
     <div data-gnl="1 3p göbekte" style="height:500px;">
-      <div data-gnl="1 1p">
+      <div>
         göbekte
       </div>
-      <div data-gnl="1 1p">
+      <div>
         göbekte
       </div>
-      <div data-gnl="1 1p">
+      <div>
         göbekte
       </div>
     </div>
     <div data-gnl="1 3p altta" style="height:500px;">
-      <div data-gnl="1 1p">
+      <div>
         altta
       </div>
-      <div data-gnl="1 1p">
+      <div>
         altta
       </div>
-      <div data-gnl="1 1p">
+      <div>
         altta
       </div>
     </div>
@@ -174,7 +174,7 @@ title: Kap Örgüsü Konumlama
   <h3>Konumlama: <span data-metin="dikkat">araları-aralık | dengeli-aralık</span></h3>
   <p>"araları-aralık" sınıfı bir HTML etiketindeki içeriği en sağa ve sola yayarak gösterir.</p>
   <p>"dengeli-aralık" sınıfı bir HTML etiketindeki içeriği sağa sola doğru yayarak gösterir.</p>
-  <div class="örnek" data-gnl="1 1p">
+  <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
       <div data-gnl="1 1p araları-aralık">
@@ -230,7 +230,7 @@ title: Kap Örgüsü Konumlama
   <h3>Konumlama: <span data-metin="dikkat">uzat | uzun-ol</span></h3>
   <p>"uzat" sınıfı bir HTML etiketindeki içeriği aşağıdan yukarıya uzatarak gösterir.</p>
   <p>"uzun-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin durumuna göre uzatır.</p>
-  <div class="örnek" data-gnl="1 1p">
+  <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
       <div data-gnl="1 2p uzat" style="height:500px;">
@@ -286,10 +286,10 @@ title: Kap Örgüsü Konumlama
   <h3>Konumlama: <span data-metin="dikkat">satırda | satırda-ol</span></h3>
   <p>"satırda" sınıfı bir HTML etiketindeki içeriği bir çizgiye dizerek gösterir.</p>
   <p>"satırda-ol" sınıfı bir buldunduğu etiketi bir çizgi konumuna dizerek gösterir.</p>
-  <div class="örnek" data-gnl="1 1p">
+  <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
-      <div data-gnl="1 1p">
+      <div>
         <div data-gnl="0" style="font-size:2em">
           Varsayılan örnek bir yazı.
         </div>
@@ -305,7 +305,7 @@ title: Kap Örgüsü Konumlama
           Örnek bir yazı "satırda".
         </div>
       </div>
-      <div data-gnl="1 1p">
+      <div>
         <div data-gnl="0 satırda-ol" style="font-size:2em">
           Örnek bir yazı "satırda-ol".
         </div>
@@ -316,7 +316,7 @@ title: Kap Örgüsü Konumlama
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="1 1p">
+    <div>
       <div data-gnl="0" style="font-size:2em">
         Varsayılan örnek bir yazı.
       </div>
@@ -332,7 +332,7 @@ title: Kap Örgüsü Konumlama
         Örnek bir yazı "satırda".
       </div>
     </div>
-    <div data-gnl="1 1p">
+    <div>
       <div data-gnl="0 satırda-ol" style="font-size:2em">
         Örnek bir yazı "satırda-ol".
       </div>
@@ -348,7 +348,7 @@ title: Kap Örgüsü Konumlama
   <p>"ters-satır" sınıfı bir HTML etiketindeki satırları aynalı olarak gösterir.</p>
   <p>"ters-sütun" sınıfı bir HTML etiketindeki sütunları aynalı olarak gösterir.</p>
   <p></p>
-  <div class="örnek" data-gnl="1 1p">
+  <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
       <div data-gnl="1 1p ters-dürme">
@@ -463,7 +463,7 @@ title: Kap Örgüsü Konumlama
   <p>"kaymadan" sınıfı bir HTML etiketindeki içeriğin dışarı taşmasını engeller.</p>
   <p>"dürmeden" sınıfı bir HTML etiketindeki içeriğin alt satırlara kaymasını engeller ve tek satırda gösterir.</p>
   <p></p>
-  <div class="örnek" data-gnl="1 1p">
+  <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
       <div data-gnl="1 24p kaymadan">
