--- a/1.0/tr/kap-orgusu/genlesme-duzeni.html
+++ b/1.0/tr/kap-orgusu/genlesme-duzeni.html
@@ -8,7 +8,7 @@ title: Kap Örgüsü Genleşme Düzeni
   <h3>Genleşme Düzeni Nasıl Kullanılır?</h3>
   <p>Ekranların hepsinde üç sütun görünümünde bir düzen oluşturalım. Örnek olarak düzen dağılımını 1 4 2 şeklinde yapalım.</p>
   <p></p>
-  <div class="örnek" data-gnl="1 1p">
+  <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
       <div data-gnl="1g">
@@ -39,10 +39,10 @@ title: Kap Örgüsü Genleşme Düzeni
 
   <p>Öncelikle <a href="/1.0/tr/kap-orgusu/parca-duzeni.html">parça düzenini</a> hatırlayalım. Parça düzeni yüzdesel olarak kararlı genişlikler tanımlamak için kullanılıyordu. Bu durum nedeniyle genişliğin içine dahil edilen parça genişlikler genişliğin sınırına dayandığında alt taraftan parçalar yer almaya devam ederler. Bu durumu göz önünde bulundurarak genleşme düzenine bakalım. Genleşme düzeni siz ne kadar genleşme kabı tanımlasanız tanımlayın alt satırdan devam etme söz konusu olmayacaktır. Yani her eklediğiniz bir genleşme kabı diğer kaplarla birlikte yeniden hesaplanıp genleşmelerin genişlikleri değişerek aynı satıra sıkışacaktır. Eğer alt satırdan devam eden genleşme kapları oluşturmak istiyorsanız burada 100% genişlikte boş bir parça kabı oluşturmanız gerekir. Böylelikle yeni genleşme kaplarınız alt satırdan devam edebilecektir.  </p>
   <p>Bunların yanında parça düzeni ile genleşme düzenini iç içe kullanabilirsiniz. Ve yine özel genişliklerinizle birlikte dahi kullanabilirsiniz. Genleşme düzeni bulunduğu yapıya göre kendine bir yer edinecektir. Aşağıdaki karma kullanım örneğini inceleyin.</p>
-  <div class="örnek" data-gnl="1 1p">
+  <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
-    <div data-gnl="1 1p">
+    <div>
       <div data-gnl="1g">
         1g
       </div>
@@ -52,7 +52,7 @@ title: Kap Örgüsü Genleşme Düzeni
       <div data-gnl="2g">
         2g
       </div>
-      <div data-gnl="1 1p">(bu alan alta geçirmek için oluşturulan 100% genişlik)</div>
+      <div>(bu alan alta geçirmek için oluşturulan 100% genişlik)</div>
       <div data-gnl="1g">
         1g
       </div>
@@ -71,7 +71,7 @@ title: Kap Örgüsü Genleşme Düzeni
       <div data-gnl="2g">
         2g
       </div>
-      <div data-gnl="1 1p">(bu alan alta geçirmek için oluşturulan 100% genişlik)</div>
+      <div>(bu alan alta geçirmek için oluşturulan 100% genişlik)</div>
       <div data-gnl="1g">
         1g
       </div>
@@ -88,7 +88,7 @@ title: Kap Örgüsü Genleşme Düzeni
   </div>
 </div>
   {% highlight html %}
-    <div data-gnl="1 1p">
+    <div>
       <div data-gnl="1g">
         1g
       </div>
@@ -98,7 +98,7 @@ title: Kap Örgüsü Genleşme Düzeni
       <div data-gnl="2g">
         2g
       </div>
-      <div data-gnl="1 1p">(bu alan alta geçirmek için oluşturulan 100% genişlik)</div>
+      <div>(bu alan alta geçirmek için oluşturulan 100% genişlik)</div>
       <div data-gnl="1g">
         1g
       </div>
@@ -117,7 +117,7 @@ title: Kap Örgüsü Genleşme Düzeni
       <div data-gnl="2g">
         2g
       </div>
-      <div data-gnl="1 1p">(bu alan alta geçirmek için oluşturulan 100% genişlik)</div>
+      <div>(bu alan alta geçirmek için oluşturulan 100% genişlik)</div>
       <div data-gnl="1g">
         1g
       </div>
@@ -138,10 +138,10 @@ title: Kap Örgüsü Genleşme Düzeni
   <h3>Genleşme Ve Parça Düzeni Kıyaslaması</h3>
   <p>Genleşme düzeni ile parça düzeni aynı hesap dengeleriyle oluşturulmamaktadır. Genleşme düzeninde her genleşme birbiri arasında etkileşimli olup, parça düzeninde ise kararlı genişlik oluşturulur. Örnek ile daha iyi anlayalım.</p>
   <p></p>
-  <div class="örnek" data-gnl="1 1p">
+  <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
-    <div data-gnl="1 1p">
+    <div>
       <div data-gnl="1g">
         1g
       </div>
@@ -152,7 +152,7 @@ title: Kap Örgüsü Genleşme Düzeni
         2g
       </div>
     </div>
-    <div data-gnl="1 1p">
+    <div>
       <div data-gnl="1 7p">
         1 7p
       </div>
@@ -166,7 +166,7 @@ title: Kap Örgüsü Genleşme Düzeni
   </div>
 </div>
   {% highlight html %}
-    <div data-gnl="1 1p">
+    <div>
       <div data-gnl="1g">
         1g
       </div>
@@ -177,7 +177,7 @@ title: Kap Örgüsü Genleşme Düzeni
         2g
       </div>
     </div>
-    <div data-gnl="1 1p">
+    <div>
       <div data-gnl="1 7p">
         1 7p
       </div>
