--- a/1.0/tr/kap-orgusu/genlesme-duzeni.html
+++ b/1.0/tr/kap-orgusu/genlesme-duzeni.html
@@ -52,7 +52,7 @@ title: Kap Örgüsü Genleşme Düzeni
       <div data-gnl="2g">
         2g
       </div>
-      <div>(bu alan alta geçirmek için oluşturulan 100% genişlik)</div>
+      <div><!--dürmek amacıyla oluşturulan 100% genişlik--></div>
       <div data-gnl="1g">
         1g
       </div>
@@ -71,7 +71,7 @@ title: Kap Örgüsü Genleşme Düzeni
       <div data-gnl="2g">
         2g
       </div>
-      <div>(bu alan alta geçirmek için oluşturulan 100% genişlik)</div>
+      <div><!--dürmek amacıyla oluşturulan 100% genişlik--></div>
       <div data-gnl="1g">
         1g
       </div>
@@ -98,7 +98,7 @@ title: Kap Örgüsü Genleşme Düzeni
       <div data-gnl="2g">
         2g
       </div>
-      <div>(bu alan alta geçirmek için oluşturulan 100% genişlik)</div>
+      <div><!--dürmek amacıyla oluşturulan 100% genişlik--></div>
       <div data-gnl="1g">
         1g
       </div>
@@ -117,7 +117,7 @@ title: Kap Örgüsü Genleşme Düzeni
       <div data-gnl="2g">
         2g
       </div>
-      <div>(bu alan alta geçirmek için oluşturulan 100% genişlik)</div>
+      <div><!--dürmek amacıyla oluşturulan 100% genişlik--></div>
       <div data-gnl="1g">
         1g
       </div>
