--- a/1.0/tr/kap-orgusu/konumlama.html
+++ b/1.0/tr/kap-orgusu/konumlama.html
@@ -51,17 +51,17 @@ title: Kap Örgüsü Konumlama
   <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
-      <div data-gnl="1 1p solda">
+      <div data-gnl="solda">
         <div data-gnl="1 3p">
           solda
         </div>
       </div>
-      <div data-gnl="1 1p ortada">
+      <div data-gnl="ortada">
         <div data-gnl="1 3p">
           ortada
         </div>
       </div>
-      <div data-gnl="1 1p sağda">
+      <div data-gnl="sağda">
         <div data-gnl="1 3p">
           sağda
         </div>
@@ -69,17 +69,17 @@ title: Kap Örgüsü Konumlama
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="1 1p solda">
+    <div data-gnl="solda">
       <div data-gnl="1 3p">
         solda
       </div>
     </div>
-    <div data-gnl="1 1p ortada">
+    <div data-gnl="ortada">
       <div data-gnl="1 3p">
         ortada
       </div>
     </div>
-    <div data-gnl="1 1p sağda">
+    <div data-gnl="sağda">
       <div data-gnl="1 3p">
         sağda
       </div>
@@ -177,7 +177,7 @@ title: Kap Örgüsü Konumlama
   <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
-      <div data-gnl="1 1p araları-aralık">
+      <div data-gnl="araları-aralık">
         <div data-gnl="1 8p">
           araları-aralık
         </div>
@@ -188,7 +188,7 @@ title: Kap Örgüsü Konumlama
           araları-aralık
         </div>
       </div>
-      <div data-gnl="1 1p dengeli-aralık">
+      <div data-gnl="dengeli-aralık">
         <div data-gnl="1 8p">
           dengeli-aralık
         </div>
@@ -202,7 +202,7 @@ title: Kap Örgüsü Konumlama
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="1 1p araları-aralık">
+    <div data-gnl="araları-aralık">
       <div data-gnl="1 8p">
         araları-aralık
       </div>
@@ -213,7 +213,7 @@ title: Kap Örgüsü Konumlama
         araları-aralık
       </div>
     </div>
-    <div data-gnl="1 1p dengeli-aralık">
+    <div data-gnl="dengeli-aralık">
       <div data-gnl="1 8p">
         dengeli-aralık
       </div>
@@ -297,7 +297,7 @@ title: Kap Örgüsü Konumlama
           Varsayılan örnek bir yazı.
         </div>
       </div>
-      <div data-gnl="1 1p satırda">
+      <div data-gnl="satırda">
         <div data-gnl="0" style="font-size:2em">
           Örnek bir yazı "satırda".
         </div>
@@ -324,7 +324,7 @@ title: Kap Örgüsü Konumlama
         Varsayılan örnek bir yazı.
       </div>
     </div>
-    <div data-gnl="1 1p satırda">
+    <div data-gnl="satırda">
       <div data-gnl="0" style="font-size:2em">
         Örnek bir yazı "satırda".
       </div>
@@ -351,7 +351,7 @@ title: Kap Örgüsü Konumlama
   <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
-      <div data-gnl="1 1p ters-dürme">
+      <div data-gnl="ters-dürme">
         <div data-gnl="1 3p">
           ters-dürme #1
         </div>
@@ -371,7 +371,7 @@ title: Kap Örgüsü Konumlama
           ters-dürme #6
         </div>
       </div>
-      <div data-gnl="1 1p ters-satır">
+      <div data-gnl="ters-satır">
         <div data-gnl="1 3p">
           ters-satır #1
         </div>
@@ -391,7 +391,7 @@ title: Kap Örgüsü Konumlama
           ters-satır #6
         </div>
       </div>
-      <div data-gnl="1 1p ters-sütun">
+      <div data-gnl="ters-sütun">
         <div data-gnl="1 3p">
           ters-sütun #1
         </div>
@@ -405,7 +405,7 @@ title: Kap Örgüsü Konumlama
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="1 1p ters-dürme">
+    <div data-gnl="ters-dürme">
       <div data-gnl="1 3p">
         ters-dürme #1
       </div>
@@ -425,7 +425,7 @@ title: Kap Örgüsü Konumlama
         ters-dürme #6
       </div>
     </div>
-    <div data-gnl="1 1p ters-satır">
+    <div data-gnl="ters-satır">
       <div data-gnl="1 3p">
         ters-satır #1
       </div>
@@ -445,7 +445,7 @@ title: Kap Örgüsü Konumlama
         ters-satır #6
       </div>
     </div>
-    <div data-gnl="1 1p ters-sütun">
+    <div data-gnl="ters-sütun">
       <div data-gnl="1 3p">
         ters-sütun #1
       </div>
@@ -469,7 +469,7 @@ title: Kap Örgüsü Konumlama
       <div data-gnl="1 24p kaymadan">
         Taşmadan yazamadıklarımızdan mısınız?
       </div>
-      <div data-gnl="1 1p dürmeden">
+      <div data-gnl="dürmeden">
         <div>
           Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
         </div>
@@ -489,7 +489,7 @@ title: Kap Örgüsü Konumlama
     <div data-gnl="1 24p kaymadan">
       Taşmadan yazamadıklarımızdan mısınız?
     </div>
-    <div data-gnl="1 1p dürmeden">
+    <div data-gnl="dürmeden">
       <div>
         Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
       </div>
